# TinyAD-Examples

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  grsi-install.sh  grsi-run.sh  grsi.txt
.github/workflows/: ci.yml
apps/: angle.cc  basic.cc  deformation.cc  manifold_optimization.cc  parametrization_geometrycentral.cc  parametrization_libigl.cc  parametrization_openmesh.cc  parametrization_polymesh.cc  polycurl_reduction.cc  polygon.cc  quad_planarization.cc
data/: bunny_cut_source.txt  cube_48k_source.txt
include/TinyAD-Examples/: Filesystem.hh  GlowFrameFieldViewer.hh  GlowViewerCommon.hh  GlowViewerIGL.hh  GlowViewerOpenMesh.hh  IGLGeometryCentralConvert.hh  IGLOpenMeshConvert.hh  IGLPolymeshConvert.hh  OpenMeshPolymeshConvert.hh  OpenMeshTypes.hh  TutteEmbeddingGeometryCentral.hh  TutteEmbeddingIGL.hh  TutteEmbeddingOpenMesh.hh  TutteEmbeddingPolymesh.hh  Video.hh
